--- a/game.html
+++ b/game.html
@@ -18,11 +18,13 @@
 						background-image: url('https://images.squarespace-cdn.com/content/v1/58b6f64f15d5db6cffb0b319/1548089942774-9YO8HHLD4QTYYMI46HYU/ke17ZwdGBToddI8pDm48kDSecG62D-PAcVbL0qn85St7gQa3H78H3Y0txjaiv_0fDoOvxcdMmMKkDsyUqMSsMWxHk725yiiHCCLfrh8O1z4YTzHvnKhyp6Da-NYroOW3ZGjoBKy3azqku80C789l0scl71iiVnMuLeEyTFSXT3ohd_5WOdFA-tuiBuy3es1JQJu2MBCaZEpY43il8muo8g/RSFA+1+small.jpg?format=1500w');
 						background-repeat: no-repeat;
 						background-size: cover;
-						filter: blur(2px);
 						font-family: Raleway;
 						color: white;
 						text-align: center;
-						
+						}
+		
+			.background-imag {
+						filter: blur(2px);
 						}
 						
 			.btn-primary {
