--- a/medium.html
+++ b/medium.html
@@ -196,7 +196,7 @@
 		<div id="main">
 			<!--99!-->
 			<h1>Difficulty: Normal</h1>
-			<h2> Detective Jake Peralta, may I ask a few questions? </h2>
+			<h2> Detective Peralta, may I ask a few questions? </h2>
 			<button class="btn-primary" onclick="play()">Sure, whatever</button> <button class="btn-primary" onclick="back()">Bring me back!</button> <br />
 		</div>
 
