--- a/game.html
+++ b/game.html
@@ -78,7 +78,7 @@
 					<h1><b> Choose Difficulty </b></h1>
 					<br>
 						<form action="arcade.html">
-						<button class="btn btn-primary" >Arcade Mode</button>
+						<button class="btn btn-primary" >Arcade Mode (rec for beginners)</button>
 						</form>
 						<h4> Infinite Mode </h4>
 					
