--- a/game.html
+++ b/game.html
@@ -78,9 +78,9 @@
 					<h1><b> Choose Difficulty </b></h1>
 					<br>
 						<form action="arcade.html">
-						<button class="btn btn-primary" >Arcade Mode (rec for beginners)</button>
+						<button class="btn btn-primary" >Arcade Mode</button>
 						</form>
-						<h4> Infinite Mode </h4>
+						<h4> Infinite Mode  (recommended for beginners)</h4>
 					
 					
 						<form action="medium.html">
