--- a/hard.html
+++ b/hard.html
@@ -214,8 +214,10 @@
 				<br>
 				<br>
 
-	<div id='progressbar1'></div>
-
+	<div id='progressbar1'></div>	
+	<form action="lose.html">
+		<button class="btn btn-primary">I confess</button>
+		</form>
 		</div>
 		</div>
 	</div>
