--- a/index.html
+++ b/index.html
@@ -122,6 +122,10 @@
 			The detective just won't believe that you're innocent! He interrogates you for what seems like an INFINITE amount of time. Make sure you give the or you'll never see the light of say again. You are now timed for every question.
 			<br><br>
 			how long can you last before you crack under the pressure?</p>
+				<br><br>
+			<h4>Tip 1: New players can hone their skills in the endless ARCADE MODE</h4>
+				<br>
+			<h4>Tip 2: Normal and Hard mode too difficult for you? Try BABY MODE found by pressing "Im new to this." in the main menu</h4>
 			</div>
 			
 			<div id="inst2">
@@ -130,6 +134,10 @@
 			In this fast-paced memory game, you find yourself handcuffed in an interrogation room. A detective drills you with an array of questions about the incident and your own background information. You will be provided with choices of what information you want to give to the interrogator. Make sure you give the same answer every time to avoid suspicion. Don't take too long to answer the questions or the detective will think you're guilty.
 			<br><br>
 			Get out of this mess as fast as you can.</p>
+				<br><br>
+			<h4>Tip 1: New players can hone their skills in the endless ARCADE MODE</h4>
+				<br>
+			<h4>Tip 2: Normal and Hard mode too difficult for you? Try BABY MODE found by pressing "Im new to this." in the main menu</h4>
 			</div>
 		</body>
 		
