--- a/medium.html
+++ b/medium.html
@@ -216,7 +216,9 @@
 				<br>
 
 	<div id='progressbar1'></div>
-
+	<form action="lose.html">
+		<button class="btn btn-primary">I confess</button>
+		</form>
 		</div>
 		</div>
 	</div>
