--- a/index.html
+++ b/index.html
@@ -86,7 +86,9 @@
 						color: white;						
 						float: right;
 						}
-	
+			h4{
+						font-size: 20px;
+						}
 						
 		</style>
 
@@ -134,10 +136,6 @@
 			In this fast-paced memory game, you find yourself handcuffed in an interrogation room. A detective drills you with an array of questions about the incident and your own background information. You will be provided with choices of what information you want to give to the interrogator. Make sure you give the same answer every time to avoid suspicion. Don't take too long to answer the questions or the detective will think you're guilty.
 			<br><br>
 			Get out of this mess as fast as you can.</p>
-				<br><br>
-			<h4>Tip 1: New players can hone their skills in the endless ARCADE MODE</h4>
-				<br>
-			<h4>Tip 2: Normal and Hard mode too difficult for you? Try BABY MODE found by pressing "Im new to this." in the main menu</h4>
 			</div>
 		</body>
 		
