--- a/index.html
+++ b/index.html
@@ -85,9 +85,11 @@
 						width: 20%;
 						color: white;						
 						float: right;
+						background-color: rgba(89, 79, 77, 35, 0.7);
 						}
 			h4{
 						font-size: 20px;
+						background-color: rgba(89, 79, 77, 35, 0.7);
 						}
 						
 		</style>
